# swe4py-example

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: code-quality.yml  unittests.yml
src/swe4py_example/: __about__.py  __init__.py  __main__.py
src/swe4py_example/cli/: __init__.py
tests/: test_cli.py
